# kotlin-cinterop-samples

./: .gitignore  README.md
clib-samples/cutils/: CMakeLists.txt
clib-samples/cutils/include/: library.h
clib-samples/cutils/src/: library.c  myapp.c
